# glycin

./: .editorconfig  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Cargo.toml  NEWS  README.md  deny.toml  meson.build  meson_options.txt
build-aux/: crates-version.py  dist-vendor.sh  setup-integration-test.py
docs/1+/: org.gnome.glycin.Decoding.xml  org.gnome.glycin.Loader.xml
glycin/: Cargo.toml
glycin-utils/: Cargo.toml
glycin-utils/src/: dbus.rs  error.rs  image_rs.rs  instruction_handler.rs  lib.rs  memory_format.rs  operations.rs  save_conversion.rs  save_math.rs  shared_memory.rs
glycin/examples/: glycin-render.rs
glycin/src/: api.rs  config.rs  dbus.rs  default_formats.rs  error.rs  gobject.rs  icc.rs  lib.rs  orientation.rs  sandbox.rs  util.rs
glycin/src/gobject/: frame.rs  image.rs  loader.rs
libglycin/: Cargo.toml  meson.build
libglycin/doc/: libglycin.toml  urlmap.js
libglycin/include/: glycin-gtk4.h  glycin.h
libglycin/libglycin-gtk4/: Cargo.toml
libglycin/libglycin-gtk4/src/: lib.rs
libglycin/src/: common.rs  error.rs  frame.rs  image.rs  lib.rs  loader.rs
loaders/: meson.build
loaders/glycin-heif/: Cargo.toml  glycin-heif.conf
loaders/glycin-image-rs/: Cargo.toml  glycin-image-rs.conf
loaders/glycin-jxl/: Cargo.toml  glycin-jxl.conf
loaders/glycin-svg/: Cargo.toml  glycin-svg.conf
tests/: Cargo.toml  dbus_api_stability.rs  libglycin.py  tests.rs
tools/: Cargo.toml
