[workspace.package]
version = "1.0.0-rc"
authors = ["Sophie Herold"]
description = "Sandboxed image decoding"
license = "MPL-2.0 OR LGPL-2.1-or-later"
homepage = "https://gitlab.gnome.org/sophie-h/glycin"
repository = "https://gitlab.gnome.org/sophie-h/glycin"
edition = "2021"
rust-version = "1.75"

[profile.release]
lto = true
codegen-units = 1

[profile.dev.package.image]
opt-level = 3

[workspace]
resolver = "2"
members = ["glycin", "glycin-utils", "loaders/*", "tests", "tools"]
default-members = ["glycin", "glycin-utils"]
