[package]
name = "glycin-utils"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
futures-lite = { version = "2.1.0", optional = true }
image = { version = "0.24.7", optional = true }
libseccomp = "0.3.0"
memmap = { package = "memmap2", version = "0.9.0", optional = true }
nix = { version = "0.27.1", features = ["fs", "signal"], optional = true }
serde = { version = "1.0.162", features = ["derive"] }
zbus = { version = "4.0.0", features = ["p2p"] }

[features]
default = []
image-rs = ["dep:image", "loader-utils"]
loader-utils = ["dep:futures-lite", "dep:nix", "dep:memmap"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
