[package]
name = "glycin-utils"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
futures-lite = { workspace = true, optional = true }
image = { workspace = true, optional = true }
libseccomp.workspace = true
memmap.workspace = true
nix = { workspace = true, features = ["fs", "signal"], optional = true }
serde.workspace = true
zbus.workspace = true
thiserror.workspace = true
libc.workspace = true
rmp-serde.workspace = true
gufo-common.workspace = true
paste.workspace = true
glib = { workspace = true, optional = true }

[features]
default = []
image-rs = ["dep:image", "loader-utils"]
loader-utils = ["dep:futures-lite", "dep:nix"]
gobject = ["glib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
