[package]
name = "glycin"
readme = "../README.md"

version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
tokio = ["dep:tokio", "zbus/tokio"]

[dependencies]
async-fs = "2.1.0"
async-global-executor = "2.4.1"
async-lock = "3.3.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
gdk = { package = "gdk4", version = "0.8.0", features = ["v4_12"] }
gio = "0.19.0"
glycin-utils = { version = "1.0.0-beta.2", path = "../glycin-utils/", default-features = false }
lcms2 = "6.0.3"
lcms2-sys = "4.0.4"
libc = "0.2.152"
libseccomp = "0.3.0"
memfd = "0.6.3"
memmap = { package = "memmap2", version = "0.9.0" }
nix = { version = "0.27.0", features = ["fs", "resource", "signal"] }
thiserror = "1.0.57"
tokio = { version = "1.35.1", optional = true }
zbus = { version = "4.0.0", features = ["p2p"] }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
features = []
