[package]
name = "glycin"
readme = "../README.md"

version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["gdk4"]
tokio = ["dep:tokio", "zbus/tokio"]
gobject = ["dep:static_assertions"]
gdk4 = ["dep:gdk"]

[dependencies]
async-fs.workspace = true
async-global-executor.workspace = true
async-lock.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
gdk = { workspace = true, optional = true }
gio.workspace = true
glycin-utils = { workspace = true }
gufo-common = { git = "https://github.com/gufo-rs/gufo.git", version = "0.1.0" }
gufo-exif = { git = "https://github.com/gufo-rs/gufo.git", version = "0.1.0" }
lcms2.workspace = true
lcms2-sys.workspace = true
libc.workspace = true
libseccomp.workspace = true
memfd.workspace = true
memmap.workspace = true
nix = { workspace = true, features = ["fs", "resource", "signal"] }
static_assertions = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
zbus = { workspace = true, features = ["p2p"] }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
features = []
