[package]
name = "libglycin"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-io = "2.3.2"
futures-task = "0.3.30"
gdk = { package = "gdk4", version = "0.8.0" }
glycin = { path = "../glycin", features = ["gobject"] }

[lib]
name = "glycin"
crate-type = ["cdylib"]
