[package]
name = "libglycin"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-io.workspace = true
futures-task.workspace = true
gdk.workspace = true
glycin = { workspace = true, features = ["gobject"] }

[lib]
name = "glycin"
crate-type = ["cdylib"]
