[package]
name = "tests"
publish = false
license.workspace = true

version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
glycin = { path = "../glycin/" }
glycin-utils = { path = "../glycin-utils/" }
gio = "0.18.1"
async-std = "1.12.0"
gdk = { package = "gdk4", version = "0.7.1" }
zbus = "3.14.1"

[[test]]
name = "tests"
path = "tests.rs"

[[test]]
name = "dbus_api_stability"
path = "dbus_api_stability.rs"
