[package]
name = "tools"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gio = "0.18.3"
glycin = { path = "../glycin" }
