[package]
name = "tools"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gdk = { package = "gdk4", version = "0.8.0" }
gio = "0.19.0"
glycin = { path = "../glycin" }
