[package]
name = "tools"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gdk.workspace = true
gio.workspace = true
glycin = { workspace = true, features = ["gdk4"] }
