[package]
name = "libglycin-gtk4"
version = "1.0.0"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gdk.workspace = true
glycin = { workspace = true, features = ["gobject", "gdk4"] }

[build-dependencies]
system-deps = "6.0"

[package.metadata.system-deps]
glycin-1 = "1.0"

[lints]
workspace = true

[lib]
name = "glycin_gtk4"
crate-type = ["cdylib"]
