[package]
name = "glycin-heif"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { path = "../../glycin-utils/", features = ["loader-utils"] }
libheif-rs = "1.0.0"
safe-transmute = "0.11.2"
