[package]
name = "glycin-image-rs"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { path = "../../glycin-utils/", features = ["image-rs"] }
image = "0.24.7"
kamadak-exif = "0.5.5"
png = "= 0.17.11"
