[package]
name = "glycin-jxl"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { path = "../../glycin-utils/", features = ["loader-utils"] }
jxl-oxide = "0.3.0"
safe-transmute = "0.11.2"
