[package]
name = "glycin-jxl"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { path = "../../glycin-utils/", features = [
    "loader-utils",
    "image-rs",
] }
jpegxl-rs = "0.8.3"
jpegxl-sys = "0.8.2"
safe-transmute = "0.11.2"
