[package]
name = "glycin-jxl"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { workspace = true, features = ["loader-utils", "image-rs"] }
jpegxl-rs = "0.10.3"
jpegxl-sys = "0.10.3"
safe-transmute.workspace = true
