[package]
name = "glycin-svg"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { path = "../../glycin-utils/" }
librsvg = "2.57.0-beta.2"
gio = "0.18"
cairo-rs = "0.18"