[package]
name = "glycin-svg"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { path = "../../glycin-utils/", features = ["loader-utils"] }
librsvg = "2.58.0"
gio = "0.19"
cairo-rs = "0.19"
