[package]
name = "glycin-svg"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cairo-rs = "0.19"
gio.workspace = true
glycin-utils = { workspace = true, features = ["loader-utils"] }
librsvg = "2.58.0"
